# chip_8_c_emulator

./: .gitignore  CMakeLists.txt  main.c  sdl2_ui.c
include/: struct.h  ui.h
